--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Flask==2.2.3
 Flask-Bootstrap==3.3.7.1
 Flask-SQLAlchemy==3.0.3
 greenlet==2.0.2
+gunicorn==20.1.0
 install==1.3.5
 itsdangerous==2.1.2
 Jinja2==3.1.2
